janken.htmlが表示される

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,1 +1,13 @@
-Hello GitHub Flow!
+<!--<input type="" text" id="name" name="name" required minlength="4" maxlength="8" size="10" />-->
+
+<!DOCTYPE html>
+<html>
+<title>Janken Game!</title>
+
+
+<form action="/janken" method="post">
+  <input type="text" id="name" name="name" />
+  <button type="submit">入室</button>
+</form>
+
+</html>
