janken.htmlが表示される

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,1 +1,14 @@
-Hello GitHub Flow!
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title>Janken Game!</title>
+</head>
+
+<form action="/janken" method="post">
+  <input type="text" id="name" name="name" />
+  <button type="submit">入場</button>
+</form>
+
+</html>
