--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,12 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Janken Game!</title>
+  <title>Janken</title>
 </head>
 
-<form action="/janken" method="post">
-  <input type="text" id="name" name="name" />
-  <button type="submit">入場</button>
-</form>
+<body>
+  <a href="/janken">jankenへのGETをリクエスト</a>
+</body>
 
 </html>
