セキュリティの認証処理を実装する

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,9 +6,8 @@
   <title>Janken Game!</title>
 </head>
 
-<form action="/janken" method="post">
-  <input type="text" id="name" name="name" />
-  <button type="submit">入場</button>
-</form>
+<body>
+  <a href="/janken">jankenへのGETをリクエスト</a>
+</body>
 
 </html>
